Reduce width of jewellery description to prevent wrapping.

--- a/style.css
+++ b/style.css
@@ -377,7 +377,7 @@ img:hover {
 }
 
 #individual-jewellery-description {
-  max-width: 30em;
+  max-width: 29em;
   margin-left: 0.5em;
 }
 
